--- a/HealingArts/Artists.storyboard
+++ b/HealingArts/Artists.storyboard
@@ -39,7 +39,7 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="jXT-xP-aCT" kind="show" id="OHE-gN-P1S"/>
+                                            <segue destination="xSl-W4-cUq" kind="show" id="OHE-gN-P1S"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -67,65 +67,6 @@
             </objects>
             <point key="canvasLocation" x="2934.7826086956525" y="671.65178571428567"/>
         </scene>
-        <!--Collection View Controller-->
-        <scene sceneID="6eX-kt-OQQ">
-            <objects>
-                <viewController id="jXT-xP-aCT" customClass="CollectionViewController" customModule="HealingArts" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="I4d-7j-CpQ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="XQH-9X-VbT">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="c6U-mY-eDw">
-                                    <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="cellID" id="V68-uY-s9G" customClass="ArtworkCollectionViewCell" customModule="HealingArts" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jZ3-Jj-Okb">
-                                                    <rect key="frame" x="-51" y="-39" width="240" height="128"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                </imageView>
-                                            </subviews>
-                                        </view>
-                                        <connections>
-                                            <outlet property="imageView" destination="jZ3-Jj-Okb" id="dh1-Lo-BSW"/>
-                                        </connections>
-                                    </collectionViewCell>
-                                </cells>
-                                <connections>
-                                    <outlet property="dataSource" destination="jXT-xP-aCT" id="3XX-GF-sB0"/>
-                                    <outlet property="delegate" destination="jXT-xP-aCT" id="YY1-4t-ys4"/>
-                                </connections>
-                            </collectionView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="XQH-9X-VbT" firstAttribute="leading" secondItem="auM-au-yAe" secondAttribute="leading" id="e2Z-qw-2lU"/>
-                            <constraint firstItem="auM-au-yAe" firstAttribute="bottom" secondItem="XQH-9X-VbT" secondAttribute="bottom" id="fvH-dq-BOG"/>
-                            <constraint firstItem="auM-au-yAe" firstAttribute="trailing" secondItem="XQH-9X-VbT" secondAttribute="trailing" id="lF0-Ql-gwT"/>
-                            <constraint firstItem="XQH-9X-VbT" firstAttribute="top" secondItem="auM-au-yAe" secondAttribute="top" id="ojn-eV-CQL"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="auM-au-yAe"/>
-                    </view>
-                    <connections>
-                        <outlet property="collectionView" destination="XQH-9X-VbT" id="Sho-dQ-ETK"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tiy-JM-0KI" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3763.7681159420295" y="671.65178571428567"/>
-        </scene>
         <!--Artists-->
         <scene sceneID="6jI-e4-nDr">
             <objects>
@@ -144,6 +85,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NpO-aJ-CiO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2024.6376811594205" y="671.65178571428567"/>
+        </scene>
+        <!--Collection-->
+        <scene sceneID="Oay-bj-SUt">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Collection" id="xSl-W4-cUq" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Y3d-aE-ODZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3763.7681159420295" y="671.65178571428567"/>
         </scene>
     </scenes>
 </document>
