--- a/HealingArts/Artists.storyboard
+++ b/HealingArts/Artists.storyboard
@@ -86,10 +86,10 @@
             </objects>
             <point key="canvasLocation" x="2024.6376811594205" y="671.65178571428567"/>
         </scene>
-        <!--Collection-->
+        <!--ArtistDetails-->
         <scene sceneID="Oay-bj-SUt">
             <objects>
-                <viewControllerPlaceholder storyboardName="Collection" id="xSl-W4-cUq" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="ArtistDetails" id="xSl-W4-cUq" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y3d-aE-ODZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3763.7681159420295" y="671.65178571428567"/>
