--- a/HealingArts/Map/Map.storyboard
+++ b/HealingArts/Map/Map.storyboard
@@ -127,6 +127,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="IbG-ir-SMA">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.68627450980000004" green="0.062745098040000002" blue="0.17254901959999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -142,6 +143,6 @@
         <image name="blankSanctuaryMap" width="800" height="852"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Nuf-ZY-hrJ"/>
+        <segue reference="uwl-ca-WCM"/>
     </inferredMetricsTieBreakers>
 </document>
