--- a/HealingArts/Gallery.storyboard
+++ b/HealingArts/Gallery.storyboard
@@ -58,7 +58,7 @@
         <scene sceneID="Q8e-y4-ido">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="I25-lb-ziI" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Gallery" id="BEi-ZF-4eU"/>
+                    <tabBarItem key="tabBarItem" title="Gallery" image="galleryIcon" id="BEi-ZF-4eU"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="tpo-aP-Mv0">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -75,4 +75,7 @@
             <point key="canvasLocation" x="2024.6376811594205" y="20.758928571428569"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="galleryIcon" width="25" height="25"/>
+    </resources>
 </document>
