donor page is prettier

--- a/HealingArts/Donor.storyboard
+++ b/HealingArts/Donor.storyboard
@@ -18,27 +18,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Thank You To Our Generous Donors" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xNe-WU-Ga8">
-                                <rect key="frame" x="18" y="156" width="379" height="29"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Thank You To Our Generous Donors" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xNe-WU-Ga8">
+                                <rect key="frame" x="18" y="238" width="379" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="350" id="cAc-TL-m11"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="italicSystem" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ELX-TH-lkY">
-                                <rect key="frame" x="87" y="206" width="240" height="482"/>
+                                <rect key="frame" x="87" y="336" width="240" height="482"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo2" translatesAutoresizingMaskIntoConstraints="NO" id="IMB-ds-dxe">
+                                <rect key="frame" x="9" y="44" width="397" height="186"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="186" id="NDN-FK-Bd8"/>
+                                    <constraint firstAttribute="width" constant="397" id="dl4-1P-Swt"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="xKG-ES-xWU" firstAttribute="trailing" secondItem="xNe-WU-Ga8" secondAttribute="trailing" constant="17" id="E6e-bV-ZRe"/>
+                            <constraint firstItem="xNe-WU-Ga8" firstAttribute="top" secondItem="IMB-ds-dxe" secondAttribute="bottom" constant="4" id="EgA-77-Cte"/>
+                            <constraint firstItem="xNe-WU-Ga8" firstAttribute="leading" secondItem="xKG-ES-xWU" secondAttribute="leading" constant="18" id="YOZ-pi-TJN"/>
+                            <constraint firstItem="IMB-ds-dxe" firstAttribute="top" secondItem="xKG-ES-xWU" secondAttribute="top" id="eVz-Oh-JKB"/>
+                            <constraint firstItem="IMB-ds-dxe" firstAttribute="leading" secondItem="xKG-ES-xWU" secondAttribute="leading" constant="9" id="ewg-qs-Q20"/>
+                            <constraint firstItem="xKG-ES-xWU" firstAttribute="trailing" secondItem="IMB-ds-dxe" secondAttribute="trailing" constant="8" id="mAs-Bg-eco"/>
+                            <constraint firstItem="xNe-WU-Ga8" firstAttribute="top" secondItem="IMB-ds-dxe" secondAttribute="bottom" constant="8" id="yMB-iT-aRf"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="xKG-ES-xWU"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Donors" image="donorIcon" id="JXl-pY-hiM"/>
                     <connections>
                         <outlet property="donorsTextView" destination="ELX-TH-lkY" id="GJ0-Ik-3Ke"/>
+                        <outlet property="thanksLabel" destination="xNe-WU-Ga8" id="j9n-Uk-yTo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V7u-Nq-h9V" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -48,5 +66,6 @@
     </scenes>
     <resources>
         <image name="donorIcon" width="25" height="25"/>
+        <image name="logo2" width="505" height="85"/>
     </resources>
 </document>
