--- a/HealingArts/About.storyboard
+++ b/HealingArts/About.storyboard
@@ -18,29 +18,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jTO-6V-CnX">
-                                <rect key="frame" x="20" y="138" width="374" height="212"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jTO-6V-CnX">
+                                <rect key="frame" x="0.0" y="140" width="414" height="212"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="212" id="BYN-vP-dYR"/>
+                                    <constraint firstAttribute="width" constant="414" id="eAL-ka-wsg"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fey-4S-Eqa">
-                                <rect key="frame" x="20" y="82" width="374" height="48"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="DWs-bt-aIo">
-                                <rect key="frame" x="20" y="358" width="374" height="216.5"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="DWs-bt-aIo">
+                                <rect key="frame" x="20" y="360" width="374" height="216.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="374" id="4cL-oU-iac"/>
+                                    <constraint firstAttribute="height" constant="216.5" id="OmW-lg-MFY"/>
+                                </constraints>
                                 <string key="text">At the Fred and Pamela Buffett Cancer Center, healing is more than medicine.  The Healing Arts program exists to create environments that support and comfort people through the diverse art opportunities and experiences. 
 The Healing Arts program will be comprised of a growing list of elements to help reduce pain perception, anxiety, stress, loneliness, and depression; and to provide new insight and clarify feelings about a cancer diagnosis and treatment.  The center's program includes works by artists such as stained-glass artisan Dale Chihuly and local artist Jun Kaneko, as well as a section featuring a new artist every six months.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7De-Ib-Dfc">
-                                <rect key="frame" x="92" y="731" width="230" height="51"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7De-Ib-Dfc">
+                                <rect key="frame" x="92" y="611.5" width="230" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="8vW-0N-Zkw"/>
+                                    <constraint firstAttribute="width" constant="230" id="azR-Er-jWU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="17"/>
                                 <state key="normal" title="More Info">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
@@ -48,8 +51,33 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                     <action selector="onInfoButtonPressed:" destination="31M-F2-wMh" eventType="touchUpInside" id="vhV-RL-bIy"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fey-4S-Eqa">
+                                <rect key="frame" x="0.0" y="68" width="414" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="414" id="QcZ-Ru-7ql"/>
+                                    <constraint firstAttribute="height" constant="48" id="mhv-2t-Zhf"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Arial-BoldItalicMT" family="Arial" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="7De-Ib-Dfc" firstAttribute="top" secondItem="DWs-bt-aIo" secondAttribute="bottom" constant="35" id="3sO-RN-Rkh"/>
+                            <constraint firstItem="fey-4S-Eqa" firstAttribute="leading" secondItem="zQJ-RX-R9C" secondAttribute="leading" id="GZ8-Le-nE6"/>
+                            <constraint firstItem="DWs-bt-aIo" firstAttribute="top" secondItem="jTO-6V-CnX" secondAttribute="bottom" constant="8" id="JAG-UF-Nl1"/>
+                            <constraint firstItem="7De-Ib-Dfc" firstAttribute="leading" secondItem="zQJ-RX-R9C" secondAttribute="leading" constant="92" id="Ti4-j8-c4y"/>
+                            <constraint firstItem="zQJ-RX-R9C" firstAttribute="trailing" secondItem="7De-Ib-Dfc" secondAttribute="trailing" constant="92" id="TuI-1a-P0p"/>
+                            <constraint firstItem="DWs-bt-aIo" firstAttribute="top" secondItem="jTO-6V-CnX" secondAttribute="bottom" constant="8" id="acX-6y-xbc"/>
+                            <constraint firstItem="zQJ-RX-R9C" firstAttribute="trailing" secondItem="DWs-bt-aIo" secondAttribute="trailing" constant="20" id="gVX-rg-1Jc"/>
+                            <constraint firstItem="DWs-bt-aIo" firstAttribute="leading" secondItem="zQJ-RX-R9C" secondAttribute="leading" constant="20" id="jBZ-5d-ckY"/>
+                            <constraint firstItem="fey-4S-Eqa" firstAttribute="top" secondItem="zQJ-RX-R9C" secondAttribute="top" constant="24" id="jsf-vF-ZMz"/>
+                            <constraint firstItem="jTO-6V-CnX" firstAttribute="leading" secondItem="zQJ-RX-R9C" secondAttribute="leading" id="omm-pI-Rz0"/>
+                            <constraint firstAttribute="trailing" secondItem="fey-4S-Eqa" secondAttribute="trailing" id="riY-dj-6Nt"/>
+                            <constraint firstItem="zQJ-RX-R9C" firstAttribute="trailing" secondItem="jTO-6V-CnX" secondAttribute="trailing" id="tTL-Up-isc"/>
+                            <constraint firstItem="jTO-6V-CnX" firstAttribute="top" secondItem="fey-4S-Eqa" secondAttribute="bottom" constant="24" id="z8r-bw-xn7"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="zQJ-RX-R9C"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="About" image="aboutIcon" id="Okd-1X-uCt"/>
